e2scrub_all: fix missing getopts argument which broke e2scrub_all -C
Addresses-Debian-Bug: #929287

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/scrub/e2scrub_all.in
+++ b/scrub/e2scrub_all.in
@@ -69,7 +69,7 @@ exitcode() {
 	exit "${ret}"
 }
 
-while getopts "nrAV" opt; do
+while getopts "nrACV" opt; do
 	case "${opt}" in
 	"n") DBG="echo Would execute: " ;;
 	"r") scrub_args="${scrub_args} -r"; reap=1;;
