configure: fix test where cron is not installed on a non-systemd system
Reported-by: thomas@linuxfromscratch.org
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/configure.ac
+++ b/configure.ac
@@ -1674,7 +1674,8 @@ AS_IF([test "x${with_crond_dir}" != "xno"],
 	AS_IF([test "x${with_crond_dir}" = "xyes"],
 	  [
 		AS_IF([test -d "/etc/cron.d"],
-		  [with_crond_dir="/etc/cron.d"])
+		  [with_crond_dir="/etc/cron.d"],
+		  [have_crond="no"; with_crond_dir=""])
 	  ])
 	AC_MSG_CHECKING([for system crontab dir])
 	crond_dir="${with_crond_dir}"
