--- a/debian/rules
+++ b/debian/rules
@@ -37,14 +37,6 @@ ifneq ($(filter pkg.e2fsprogs.no-fuse2fs,$(DEB_BUILD_PROFILES)),)
 SKIP_FUSE2FS=yes
 endif
 
-ifneq ($(filter pkg.e2fsprogs.no-static-e2fsck,$(DEB_BUILD_PROFILES)),)
-SKIP_E2FSCK_STATIC=yes
-endif
-
-ifneq ($(filter noudeb,$(DEB_BUILD_PROFILES)),)
-SKIP_UDEB=yes
-endif
-
 # find the version for the main package, from changelog file
 MAIN_VERSION = $(shell head -n 1 debian/changelog | cut '-d ' -f 2 | sed 's/[()]//g')
 # find versions for libraries going into their own packages, from their Makefile.in's,
@@ -137,10 +129,6 @@ COMMON_CONF_FLAGS = --enable-lto --disable-ubsan --disable-addrsan \
 
 STD_CONF_FLAGS ?= --enable-elf-shlibs
 
-ifeq ($(SKIP_UDEB),)
-INSTALL_UDEB = install-udeb
-endif
-
 mrproper: clean
 	if test -f debian/control.save; then \
 		mv debian/control.save debian/control ; \
@@ -186,9 +174,7 @@ build: ${BUILDSTDSTAMP}
 ${BUILDSTDSTAMP}: ${CFGSTDSTAMP}
 	dh_testdir
 	$(MAKE) -C ${stdbuilddir} V=1 all
-ifneq ($(SKIP_E2FSCK_STATIC),yes)
 	$(MAKE) -C ${stdbuilddir}/e2fsck V=1 e2fsck.static
-endif
 	if ! test -d debian/orig-gmo ; then \
 		mkdir debian/orig-gmo ; \
 		mv po/*.gmo po/*.po debian/orig-gmo ; \
@@ -196,8 +182,8 @@ endif
 	fi
 	$(MAKE) -C ${stdbuilddir}/po V=1 update-gmo
 
-	( cd ${stdbuilddir}/doc && $(MAKE) V=1 libext2fs.html )
-	( cd ${stdbuilddir}/lib/et && $(MAKE) V=1 com_err.info com_err.html )
+	$(MAKE) -C ${stdbuilddir}/doc V=1 libext2fs.html
+	$(MAKE) -C ${stdbuilddir}/lib/et V=1 com_err.info com_err.html
 	cat $(shell /bin/ls -1 ./doc/RelNotes/*.txt | tac) | \
 		gzip -9n > ${stdbuilddir}/NEWS.gz
 
@@ -235,25 +221,15 @@ install: build
   # static libs and .h files
 	$(MAKE) -C ${stdbuilddir} V=1 install-libs DESTDIR=${tmpdir} LDCONFIG=true
 
-ifneq ($(SKIP_E2FSCK_STATIC),yes)
   # statically-linked fsck
 	${INSTALL_PROGRAM} $(E2FSCK_STATIC) ${tmpdir}/sbin
 	cp ${mandir}/man8/e2fsck.8 ${mandir}/man8/e2fsck.static.8
-endif
 
 ifeq ($(DEB_HOST_ARCH_OS), hurd)
 	${INSTALL} -m 0644 misc/mke2fs-hurd.conf ${tmpdir}/etc/mke2fs.conf
 endif
 
-	dh_install -p e2fsprogs --sourcedir=${stdbuilddir} NEWS.gz \
-		usr/share/doc/e2fsprogs
-	dh_movefiles
-	test -z "`find ${tmpdir} -type f`"
-
-install-udeb: build
-	dh_testdir
-	dh_testroot
-
+    # install for e2fsprogs-udeb
 	$(MAKE) -C ${stdbuilddir} V=1 install-shlibs-libs-recursive DESTDIR=${udebdir} \
 		INSTALL_PROGRAM="${INSTALL_PROGRAM}" LDCONFIG=true
 	$(MAKE) -C ${stdbuilddir}/e2fsck V=1 install DESTDIR=${udebdir} \
@@ -273,6 +249,12 @@ install-udeb: build
 		ln -sf mke2fs mkfs.ext2 ; ln -sf mke2fs mkfs.ext3 ; \
 		ln -sf mke2fs mkfs.ext4)
 
+    # install main e2fsprogs package
+	dh_install -p e2fsprogs --sourcedir=${stdbuilddir} NEWS.gz \
+		usr/share/doc/e2fsprogs
+	dh_movefiles
+	test -z "`find ${tmpdir} -type f`"
+
 binary-indep: install
 	dh_testdir
 	dh_testroot
@@ -286,7 +268,7 @@ binary-indep: install
 	dh_md5sums -i
 	dh_builddeb -i
 
-binary-arch: install $(INSTALL_UDEB)
+binary-arch: install
 	dh_testdir
 	dh_testroot
 
@@ -355,27 +337,19 @@ binary-arch: install $(INSTALL_UDEB)
 	dh_shlibdeps -a -l${stdbuilddir}/lib
 	dh_shlibdeps -pe2fsprogs -l${stdbuilddir}/lib \
 		-u"-Ldebian/e2fsprogs.shlibs.local"
-ifeq ($(SKIP_UDEB),)
 	dh_shlibdeps -pe2fsprogs-udeb -l${stdbuilddir}/lib \
 		-u"-Ldebian/e2fsprogs-udeb.shlibs.local"
-endif
 ifeq ($(SKIP_FUSE2FS),)
 	dh_shlibdeps -pfuse2fs -l${stdbuilddir}/lib \
 		-u"-Ldebian/e2fsprogs.shlibs.local"
 endif
 
-	dh_gencontrol -a -Ncomerr-dev -Nss-dev -Ne2fsprogs-udeb
+	dh_gencontrol -a -Ncomerr-dev -Nss-dev
 	dh_gencontrol -pcomerr-dev \
 	  -u '-v${COMERR_VERSION}-${MAIN_VERSION} -VmainBinary=${MAIN_VERSION}'
 	dh_gencontrol -pss-dev \
 	  -u '-v${SS_VERSION}-${MAIN_VERSION} -VmainBinary=${MAIN_VERSION}'
-ifeq ($(SKIP_UDEB),)
-	dh_gencontrol -pe2fsprogs-udeb -- -fdebian/files~
-endif
 
-ifeq ($(SKIP_UDEB),)
-	dpkg-distaddfile $(UDEB_NAME) debian-installer $(UDEB_PRIORITY)
-endif
 	dh_md5sums -a
 	dh_builddeb -a
 
