--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,8 @@ Priority: optional
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Replaces: e2fsprogs (<< 1.45.3-1)
 Breaks: e2fsprogs (<< 1.45.3-1)
-Architecture: linux-any kfreebsd-any
+Architecture: any
+Multi-Arch: foreign
 Description: save the output of a command in a log file
  The logsave program will execute cmd_prog with the specified
  argument(s), and save a copy of its output to logfile.  If the
