--- a/debian/rules
+++ b/debian/rules
@@ -170,7 +170,9 @@ override_dh_gencontrol:
 	dh_gencontrol --remaining-packages
 
 override_dh_auto_test:
+ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 	$(MAKE) -C ${stdbuilddir} V=1 check
+endif
 
 test_printenv:
 	printenv | sort
