debian: stop using LTO (link-time optimization)
LTO breaks reproducible builds, and there is some question as to how
reliable LTO's code generator is --- there are some scary stories that
it doesn't work well, and the GCC maintainers aren't super-interested
in fixing the bugs:

https://lists.debian.org/debian-devel/2019/07/msg00610.html

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ LDFLAGS_STATIC = $(filter-out -fPIE -fpie -pie,$(LDFLAGS))
 
 BACKTRACE_CONF_FLAGS ?= $(shell if debian/scripts/test-backtrace ; then echo --disable-backtrace ; fi)
 
-COMMON_CONF_FLAGS = --enable-elf-shlibs --enable-lto --disable-ubsan \
+COMMON_CONF_FLAGS = --enable-elf-shlibs --disable-ubsan \
 	--disable-addrsan --disable-threadsan --disable-e2initrd-helper \
 	--disable-fsck --disable-libblkid --disable-libuuid --disable-uuidd \
 	--infodir=/usr/share/info  --enable-symlink-install \
