debian: update gbp.conf file for backports build
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,4 +1,7 @@
 [DEFAULT]
 pristine-tar = True
 upstream-tag='v%(version)s'
-debian-branch=debian/master
+debian-branch=debian/backports
+
+[buildpackage]
+builder = sbuild -A -s -v -d buster
