--- a/lib/config.h.in
+++ b/lib/config.h.in
@@ -9,6 +9,9 @@
 /* Define to 1 to compile findfs */
 #undef CONFIG_BUILD_FINDFS
 
+/* Define to 1 for features for use by ext4 developers */
+#undef CONFIG_DEVELOPER_FEATURES
+
 /* Define to 1 if debugging ext3/4 journal code */
 #undef CONFIG_JBD_DEBUG
 
